# information_retrieval

./: README.md
executable/: Makefile  index_main.cc  ir.cc
filemanager/: data_structure.h  directorycontent.cc  directorycontent.h  filemanager.cc  filemanager.h
index/: index.cc  index.h  index_type.h
masterindex/: masterindex.cc  masterindex.h
retrieval_model_1/: fileio.h  writstrm.c
retrieval_model_1/database/: base.h  linkedlist.h  page_file_component.md  pf.h  pf_buffermgr.h  pf_hashtable.cc  pf_hashtable.h  pf_internal.h  pf_manager.cc  statistics.cc  statistics.h
retrieval_model_2/: .gitignore  CMakeLists.txt  README.md
retrieval_model_2/config/: CMakeLists.txt  config.h
retrieval_model_2/executable/: CMakeLists.txt  cli_system.cc  trec.cc  whs.cc
retrieval_model_2/filesystem/: CMakeLists.txt  fileobject.cc  filesystem.cc  filesystem.h  filesystemcache.cc
retrieval_model_2/index/: CMakeLists.txt  compactindex.cc  compactindex.h  index.cc  index.h  index_types.cc  index_types.h  ondisk_index.h
retrieval_model_2/misc/: CMakeLists.txt  alloc.cc  alloc.h  backend.h  configrator.cc  configrator.h  io.cc  io.h  lockable.cc  lockable.h  logging.cc  logging.h  macros.h  stringtokenizer.cc  stringtokenizer.h  utils.cc  utils.h
retrieval_model_2/test/: CMakeLists.txt  fileio.cc  filesystem_test.cc  logging_test.cc  utils_test.cc
tests/: Makefile  index_test.cc  test_index
tests/index/: Makefile  index_test.cc  test_index
utils/: Makefile  all.h  alloc.h  compression.h  configurator.cc  configurator.h  configurator_test.cc  diary.md  logging.cc  logging.h  stringtokenizer.cc  stringtokenizer.h  stringtokenizer_test.cc  utils.cc  utils.h  utils_test.cc
